Changing Exec to Professional

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>getNoticed - Helping Executives Get Noticed</title>
+    <title>getNoticed - Helping Professionals Get Noticed</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
                 <div class="banner-text text-center">
-                    <h1>We Market Executives.</h1>
+                    <h1>We Market Professionals.</h1>
                     <p class="tagline">Focus on what you do best, let us handle your digital presence.<br/><br/>
                     <i class="fa fa-check-square-o" aria-hidden="true"></i> Find Opportunities 
                     <i class="fa fa-check-square-o" aria-hidden="true"></i> Get Discovered  
@@ -129,7 +129,7 @@
                         <div class="plan-cta"><a href="#" class="btn btn-large  btn-ghost btn-white-ghost" >Sign Me Up</a></div>
                     </div>
                     <div class="col-md-4 col-sm-12 plan-details featured-plan">
-                        <div class="plan-name">Executive Plan</div>
+                        <div class="plan-name">Pro Plan</div>
                         <div class="plan-features">
                             Same as Starter Plan, plus...<br/>
                             Enhanced Reports<br/>
@@ -143,7 +143,7 @@
                     <div class="col-md-4 col-sm-12 plan-details">
                         <div class="plan-name">Custom Plan</div>
                         <div class="plan-features">
-                            Same as Executive Plan, plus...<br/>
+                            Same as Pro Plan, plus...<br/>
                             Dedicated Support<br/>
                             Content Writing Service<br/>
                             Website Customisation
@@ -164,7 +164,7 @@
             <h2 class="text-center">What We Offer</h2>
             <div class="row">
                 <div class="col-md-4 col-sm-6 feature text-center">
-                    <img src="/images/icons/browser.png" alt="Build Websites for Executives"/>
+                    <img src="/images/icons/browser.png" alt="Build Websites for Professionals"/>
                     <div class="feature-content">
                         <h5>Website</h5>
                         <p>We’ll get you set up with your own website, no coding required. In fact, we’ll pull information from your social profiles so it will be ready in minutes. </p>
@@ -172,21 +172,21 @@
                 </div>
                
                 <div class="col-md-4 col-sm-6 feature text-center">
-                    <img src="/images/icons/rocket.png" alt="Keep your executive skills up to date"/>
+                    <img src="/images/icons/rocket.png" alt="Keep your professional skills up to date"/>
                     <div class="feature-content">
                         <h5>Keep up to date</h5>
                         <p>We analyse which skills are becoming in demand within your industry, and find partners and opportunities for your continued education.</p>
                     </div>
                 </div>
                  <div class="col-md-4 col-sm-6 feature text-center">
-                    <img src="/images/icons/email.png" alt="Set up email for executives"/>
+                    <img src="/images/icons/email.png" alt="Set up email for professionals"/>
                     <div class="feature-content">
                         <h5>Email</h5>
                         <p>We can also set you up with your own professional email address, and go the extra mile, and create a custom email signature for you.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 feature text-center">
-                    <img src="/images/icons/trends.png" alt="Weekly reports for executive professional development"/>
+                    <img src="/images/icons/trends.png" alt="Weekly reports for professional development"/>
                     <div class="feature-content">
                         <h5>Weekly Reports</h5>
                         <p>Every week, we’ll send you a report that shows how your profile is doing, recommendations, and onine visibility.</p>
@@ -194,14 +194,14 @@
                 </div>
                 
                 <div class="col-md-4 col-sm-6 feature text-center">
-                    <img src="/images/icons/calendar.png" alt="Find speaking and mentorhip engagements for executives"/>
+                    <img src="/images/icons/calendar.png" alt="Find speaking and mentorhip engagements for professionals"/>
                     <div class="feature-content">
                         <h5>Engagements</h5>
                         <p>Wether you are speaking at an event, or providing mentorship at an startup incubator, let your followers know how they can find you.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 feature text-center">
-                    <img src="/images/icons/compose.png" alt="Content writing services for executives"/>
+                    <img src="/images/icons/compose.png" alt="Content writing services for professionals"/>
                     <div class="feature-content">
                         <h5>Content Writing</h5>
                         <p>Get known for your ideas! Publishing them online couldn’t be easier. Let us show your how to get started. We also offer content writing services.</p>
