--- a/emails/confirm-subscription.html
+++ b/emails/confirm-subscription.html
@@ -155,7 +155,7 @@
             <table role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="max-width: 600px;">
                 <tr>
                     <td style="padding: 20px 0; text-align: center">
-                        <img src="http://www.getnoticed.io/images/logo.png" aria-hidden="true" width="190" height="40" alt="alt_text" border="0" style="height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                        <img src="http://www.getnoticed.io/images/logo.png" aria-hidden="true" width="190" height="40" alt="alt_text" border="0" style="height: auto; background: #FDFFFC; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
                     </td>
                 </tr>
             </table>
@@ -180,7 +180,7 @@
                                     <table role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center" style="margin: auto;">
                                         <tr>
                                             <td style="border-radius: 3px; background: #222222; text-align: center;" class="button-td">
-                                                <a href="{{ confirmation_link }}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
+                                                <a href="{{ confirmation_url }}" style="background: #222222; border: 15px solid #222222; font-family: sans-serif; font-size: 13px; line-height: 1.1; text-align: center; text-decoration: none; display: block; border-radius: 3px; font-weight: bold;" class="button-a">
                                                     <span style="color:#FDFFFC;" class="button-link">&nbsp;&nbsp;&nbsp;&nbsp;Confirm Email Address&nbsp;&nbsp;&nbsp;&nbsp;</span>
                                                 </a>
                                             </td>
