--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     <link rel="stylesheet" href="/css/responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+        <!-- Facebook OpenGraph Meta Tags -->
+    <meta property="og:url" content="http://www.getnoticed.io"/>
+    <meta property="og:title" content="Your Professional Development Taken Care Of"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="http://www.getnoticed.io/images/og.jpg"/>           
+    <meta property="og:description" content="We help professionals who are busy build their digital presence to get noticed! With getNoticed, you can focus on what you do best."/>        
+    <meta property="fb:app_id" content="1950156078548189"/> 
+
+    <!-- Twitter Cards Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@getnoticedio">
+    <meta name="twitter:title" content="Your Professional Development Taken Care Of">
+    <meta name="twitter:description" content="We help professionals who are busy build their digital presence to get noticed! With getNoticed, you can focus on what you do best.">
+    <meta name="twitter:image" content="http://www.getnoticed.io/images/og.jpg">
+    
     <script type="text/javascript">
       !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t){var e=document.createElement("script");e.type="text/javascript";e.async=!0;e.src=("https:"===document.location.protocol?"https://":"http://")+"cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};analytics.SNIPPET_VERSION="4.0.0";
       analytics.load("EhFQqLTZVAi259lZOUNKl13SoOweTu8m");
