--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="We help professionals who are busy build their digital presence to get noticed! With getNoticed, you can focus on what you do best.">
+    <meta name="description" content="Helping busy people with their professional development and find opportunities to get noticed! With getNoticed, let us help you grow so you can focus on what you do best.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>getNoticed - Helping Professionals Get Noticed</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
@@ -23,14 +23,14 @@
     <meta property="og:title" content="Your Professional Development Taken Care Of"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="http://www.getnoticed.io/images/og.jpg"/>           
-    <meta property="og:description" content="We help professionals who are busy build their digital presence to get noticed! With getNoticed, you can focus on what you do best."/>        
+    <meta property="og:description" content="Helping busy people with their professional development and find opportunities to get noticed! With getNoticed, let us help you grow so you can focus on what you do best."/>        
     <meta property="fb:app_id" content="1950156078548189"/> 
 
     <!-- Twitter Cards Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="@getnoticedio">
     <meta name="twitter:title" content="Your Professional Development Taken Care Of">
-    <meta name="twitter:description" content="We help professionals who are busy build their digital presence to get noticed! With getNoticed, you can focus on what you do best.">
+    <meta name="twitter:description" content="Helping busy people with their professional development and find opportunities to get noticed! With getNoticed, let us help you grow so you can focus on what you do best.">
     <meta name="twitter:image" content="http://www.getnoticed.io/images/og.jpg">
     
     <script type="text/javascript">
