--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                             Weekly Reports<br/>
                         </div>
                         <div class="plan-pricing">$50/mo</div>
-                        <div class="plan-cta"><a href="#" class="btn btn-large  btn-ghost btn-white-ghost trackThis" data-event-category="Landing Page" data-event-action="Plan Chosen" data-event-label="Starter"  data-event-value="50" data-toggle="modal" data-target="#earlyModal">Sign Me Up</a></div>
+                        <div class="plan-cta"><a href="#" class="btn btn-large  btn-ghost btn-white-ghost trackThis" data-event-category="Landing Page" data-event-action="Plan Chosen" data-event-label="Starter"  data-event-value="50" data-toggle="modal" data-target="#earlyModal">Start 30 Day Trial</a></div>
                     </div>
                     <div class="col-md-4 col-sm-12 plan-details featured-plan">
                         <div class="plan-name">Pro Plan</div>
@@ -152,7 +152,7 @@
                             Business Card Templates
                         </div>
                         <div class="plan-pricing">$100/mo</div>
-                        <div class="plan-cta"><a href="#" class="btn btn-large trackThis" data-event-category="Landing Page" data-event-action="Plan Chosen" data-event-label="Pro"  data-event-value="100" data-toggle="modal" data-target="#earlyModal">Sign Me Up</a></div>
+                        <div class="plan-cta"><a href="#" class="btn btn-large trackThis" data-event-category="Landing Page" data-event-action="Plan Chosen" data-event-label="Pro"  data-event-value="100" data-toggle="modal" data-target="#earlyModal">Start 30 Day Trial</a></div>
                     </div>
                     <div class="col-md-4 col-sm-12 plan-details">
                         <div class="plan-name">Custom Plan</div>
@@ -163,7 +163,7 @@
                             Website Customisation
                         </div>
                         <div class="plan-pricing">Contact Us</div>
-                        <div class="plan-cta"><a href="#" class="btn btn-large btn-ghost  btn-white-ghost trackThis" data-event-category="Landing Page" data-event-action="Plan Chosen" data-event-label="Custom" data-toggle="modal" data-target="#earlyModal">Sign Me Up</a></div>
+                        <div class="plan-cta"><a href="#" class="btn btn-large btn-ghost  btn-white-ghost trackThis" data-event-category="Landing Page" data-event-action="Plan Chosen" data-event-label="Custom" data-toggle="modal" data-target="#earlyModal">Contact Us</a></div>
                     </div>
                 </div>
      
