Adding value to custom plan

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                             Content Writing Service<br/>
                             Website Customisation
                         </div>
-                        <div class="plan-pricing">Contact Us</div>
-                        <div class="plan-cta"><a href="#" class="btn btn-large btn-ghost  btn-white-ghost trackThis" data-event-category="Landing Page" data-event-action="Plan Chosen" data-event-label="Custom" data-toggle="modal" data-target="#earlyModal">Contact Us</a></div>
+                        <div class="plan-pricing">$600</div>
+                        <div class="plan-cta"><a href="#" class="btn btn-large btn-ghost  btn-white-ghost trackThis" data-event-category="Landing Page" data-event-action="Plan Chosen" data-event-label="Custom" data-event-value="600" data-toggle="modal" data-target="#earlyModal">Contact Us</a></div>
                     </div>
                 </div>
      
