--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                       <div class="response" id="mce-success-response" style="display:none"></div>
                   </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_97cc194e3a3f44f9b74ff4893_d96c428498" tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" value="Get Notified" name="subscribe" class="btn btn-large" data-event-category="Landing Page" data-event-action="Sign Up" data-event-label="PreRegister" ></div>
+                  <div class="clear"><input type="submit" value="Get Notified" name="subscribe" class="trackThis btn btn-large" data-event-category="Landing Page" data-event-action="Sign Up" data-event-label="PreRegister" ></div>
                   </div>
                 </form>
               </div>
